--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -14,7 +14,7 @@
         This plan offers an opportunity for learners to engage in collaborative language exercises and
         group activities, boosting their conversational skills and confidence in using English.
       </p>
-      <button class="lessons-btn">Leave an application</button>
+      <a href="#leave-application" class="lessons-btn">Leave an application</a>
     </div>
 
     <!-- Standard Card -->
@@ -25,7 +25,7 @@
         Our standard package provides a balanced learning approach that covers all key areas of English
         language - reading, writing, listening, and speaking. It is a set of basic knowledge and skills.
       </p>
-      <button class="lessons-btn">Leave an application</button>
+      <a href="#leave-application" class="lessons-btn">Leave an application</a>
     </div>
 
     <!-- Individual Card -->
@@ -36,7 +36,7 @@
         We offer a tailored learning experience with individualized instruction that focuses on a learner’s
         specific language goals and challenges, offering personal feedback.
       </p>
-      <button class="lessons-btn">Leave an application</button>
+      <a href="#leave-application" class="lessons-btn">Leave an application</a>
     </div>
   </div>
 </section>
