--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -33,10 +33,7 @@
         </ul>
       </nav>
       <div class="header-social-icons-footer">
-        <a
-          href="https://www.facebook.com/goit.polska/"
-          target="_blank"
-          target="_blank"
+        <a href="https://www.facebook.com/goit.polska/" target="_blank"
           ><svg class="header-icon-footer">
             <use href="public/icons.svg#icon-facebook"></use></svg
         ></a>
