--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -1,7 +1,7 @@
 <section id="teachers" class="section teachers-section">
   <div class="container">
     <div class="teachers-card-container">
-      <h2 class="teachers-header">Meet Our <span class="teachers-marker">Teachers</span></h2>
+      <h2 class="teachers-header">Meet our <span class="teachers-marker">teachers</span></h2>
       <p class="teachers-paragraph">Discover our team of dedicated educators, committed to guiding you on your journey
         to English
         proficiency with personalized and engaging instruction</p>
